# IPTV-Player

./: .gitignore  ARCHITECTURE.txt  Cargo.toml  FEATURE_PARITY.md  M3U_PARSING.md  PROJECT_COMPLETE.md  QUICK_START_EPG.md  README.md  build.rs  bundle-media-tools.sh
.claude/: settings.local.json
.github/: copilot-instructions.md
Soccer-Scraper-main/: .gitignore  CONTRIBUTING.md  GITHUB_UPLOAD.md  LICENSE  QUICKSTART.md  README.md  UPLOAD_CHECKLIST.md  cloudflare_bypass_scraper.py  database_manager.py  fixtures.py  requirements.txt
Soccer-Scraper-main/.github/workflows/: scrape.yml.example
docs/: DEVELOPMENT_GUIDE.md  EPGSHARE01_GUIDE.md  EPG_GUIDE.md  MIGRATION_PROGRESS.md  STEAM_DECK_BUILD.md  UI_ENHANCEMENTS.md  XTREAM_API_GUIDE.md
examples/: config_with_epg.json  parse_m3u.rs
scripts/: bundle-media-tools.bat
src/: m3u.rs  main.rs  media_tools.rs  xmltv.rs
src/api/: football.rs  mod.rs  omdb.rs  scraper_integration.rs  tmdb.rs  trakt.rs  tvmaze.rs  xtream.rs
src/models/: config.rs  content_cache.rs  mod.rs  types.rs  watch_history.rs
src/ui/: app.rs  epg_cache.rs  image_cache.rs  messages.rs  mod.rs  theme.rs
src/ui/components/: channel_card.rs  discover_card.rs  epg_settings.rs  episode_dialog.rs  football_card.rs  login.rs  mod.rs  movie_card.rs  pagination.rs  player_settings.rs  scraper_settings.rs  series_card.rs  sidebar.rs  tmdb_card.rs  top_nav.rs
tests/: xmltv_test.xml  xtream_api_test.rs
