[package]
name = "iptv-player"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
image = { version = "0.25", features = ["jpeg", "png"] }
dirs = "5.0"
urlencoding = "2.1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
